<resources>
    <string name="app_name">demo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signuphere">New user? Signup here!</string>
    <string name="signup">SignUp</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="loginhere">Login here</string>
    <string name="Dashboard">Dashboard</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="upcoming">Upcoming</string>
    <string name="view_list">"View List"</string>
    <string name="track_progress">"Track Progress"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>